# sumo-balls

./: .clang-format  .clang-tidy  .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.orig  CMakePresets.json  COORDINATOR_INTEGRATION.md  Dockerfile.coordinator  Dockerfile.server  FILES_MANIFEST.md  IMPLEMENTATION_STATUS.md  OAUTH_COMPLETED.md  OAUTH_IMPLEMENTATION.md  OAUTH_SETUP_GUIDE.sh  PHASE2_COMPLETE.md  QUICK_START.sh  README.md  SCREEN_IMPROVEMENTS_COMPLETE.md  VISUAL_IMPLEMENTATION_REPORT.md  build.sh  config.json  coordinator.db  docker-compose.yml  imgui.ini  notes  run-client.sh  run-server.sh  test_online.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
assets/: README.md
cmake/Modules/: CompilerWarnings.cmake
config/: README.md
coordinator/: .env.example  .golangci.yml  README.md  auth.go  auth_test.go  config.go  coordinator.db  database.go  friends.go  friends_test.go  go.mod  go.sum  lobby.go  lobby_test.go  login_resp.json  main.go  party.go  queue.go  register_resp.json  run.sh  test_api_old.sh  test_new_api.sh  types.go  username.go
docs/: AI_DESIGN_ANALYSIS.md  ARCHITECTURE.md  AUTH_LOBBY_IMPLEMENTATION.md  CLIENT_AUTH_IMPLEMENTATION.md  CLIENT_SOCIAL_INTEGRATION.md  CODE_REVIEW.md  CODE_REVIEW_IMPLEMENTATION.md  DEPLOYMENT.md  DEV_WORKFLOW.md  ESC_KEY_IMPLEMENTATION.md  FRIEND_QUEUE_IMPLEMENTATION.md  FRIEND_QUEUE_SYSTEM.md  GOOGLE_OAUTH_SETUP.md  IMPROVEMENTS.md  MATCHMAKING_GUIDE.md  PHASE1_COMPLETE_SUMMARY.md  PROJECT_STRUCTURE.md  QUEUE_API_REFERENCE.md  QUEUE_QUICK_START.md  QUEUE_SYSTEM_SUMMARY.md  RELEASE.md  REORGANIZATION_SUMMARY.md  SCREEN_ARCHITECTURE.md  SOCIAL_FEATURES.md  VISUAL_DESIGN_GUIDE.md  WSL_BROWSER_GUIDE.md
docs/archive/: AI_DIFFICULTY_GUIDE.md  GOOGLE_OAUTH_READY.md  PHASE2_IMPLEMENTATION.md  POLISH_SUMMARY.md  README_OLD.md  SDL2_IMGUI_MIGRATION.md  SESSION_SUMMARY.md  SFML_REMOVAL_SUMMARY.md  VISUAL_IMPROVEMENTS.md
scripts/: bootstrap.sh  build.sh  format.sh  quick-start.sh  register-test-server.sh  run-client.sh  run-matchmaking-gameplay-test.sh  run-server.sh  setup-oauth.sh  test_online.sh
scripts/run/: commit-coordinator.sh  run-client.sh  run-coordinator.sh  run-matchmaking-test.sh
scripts/test/: test-lobby-with-two-clients.sh
src/: main.cpp  server_main.cpp
src/core/: Game.cpp  Game.h  GraphicsContext.cpp  GraphicsContext.h  ImGuiManager.cpp  ImGuiManager.h  KeyBindings.cpp  KeyBindings.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h  Screen.cpp  Screen.h  ScreenStack.cpp  ScreenStack.h  ScreenTransition.h  Settings.cpp  Settings.h  SettingsManager.cpp  SettingsManager.h
src/game/: GamePhase.h  GamePhysics.cpp  GamePhysics.h  PhysicsValidator.h  Player.cpp  Player.h
src/game/controllers/: AIController.cpp  AIController.h  Controller.h  HumanController.cpp  HumanController.h  NetworkController.h
src/game/entities/: Arena.cpp  Arena.h  Player.cpp  Player.h  PlayerEntity.cpp  PlayerEntity.h
src/game/menus/: MainMenu.h  Menu.h
src/game/simulation/: PhysicsValidator.h  Simulation.cpp  Simulation.h
src/network/: GameNetworkManager.cpp  GameNetworkManager.h  HttpClient.h  NetClient.cpp  NetClient.h  NetCommon.cpp  NetCommon.h  NetProtocol.cpp  NetProtocol.h  NetServer.cpp  NetServer.h  SocialManager.cpp  SocialManager.h
src/screens/: AuthScreen.cpp  AuthScreen.h  FriendsScreen.cpp  FriendsScreen.h  GameEndedScreen.cpp  GameEndedScreen.h  GameScreen.cpp  GameScreen.h  LobbyScreen.cpp  LobbyScreen.h  WelcomeScreen.cpp  WelcomeScreen.h
src/screens/menus/: GameOverMenu.cpp  GameOverMenu.h  MainMenu.cpp  MainMenu.h  Menu.h  MenuAction.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h
src/simulation/: Simulation.cpp  Simulation.h
src/systems/: InputSystem.cpp
src/ui/: Button.cpp  Button.h  GameOverlay.h  ToggleSwitch.h  UIComponents.cpp  UIComponents.h  UIElement.cpp  UIElement.h
src/ui/components/: GameOverlay.cpp  GameOverlay.h  ToggleSwitch.cpp  UIComponents.cpp  UIElement.h
src/ui/scenes/: MatchResultsScene.cpp  MatchResultsScene.h  MatchScene.cpp  MatchScene.h
src/ui/views/: CreatePlayerView.cpp  CreatePlayerView.h  FriendsView.cpp  FriendsView.h  LobbyView.cpp  LobbyView.h  LoginView.cpp  LoginView.h  MainMenuView.cpp  MainMenuView.h  MatchResultsView.cpp  MatchResultsView.h  PauseMenuView.cpp  PauseMenuView.h  SettingsView.cpp  SettingsView.h
src/utils/: GameConfig.h  GameConstants.h  SimpleJson.h  VectorMath.h
tests/: README.md  TestFramework.h  TestRunner.cpp  test_physics.cpp  test_ui.cpp
tests/e2e/: smoke_test.cpp
tests/unit/: NetProtocolTest.cpp  ScreenTransitionsTest.cpp
tests/unit/core/: LoggerTest.cpp  SettingsTest.cpp
tests/unit/game/: PhysicsTest.cpp
